--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
 </head>
 <body>
     <script src="./lib/phaser.min.js"></script>
+    <script src="./src/prefabs/velbar.js"></script>
     <script src="./src/scenes/Menu.js"></script>
     <script src="./src/scenes/Play.js"></script>
+   
     <script src="./src/scenes/Platform.js"></script>
     <script src= "./src/main.js"></script>
     
