--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 <body>
     <script src="./lib/phaser.min.js"></script>
     <script src="./src/prefabs/velbar.js"></script>
+    <script src="./src/prefabs/Predator.js"></script>
     <script src="./src/scenes/Menu.js"></script>
     <script src="./src/scenes/Play.js"></script>
-   
+    
     <script src="./src/scenes/Platform.js"></script>
     <script src= "./src/main.js"></script>
     
